fix personal conda python version

--- a/environment.yml
+++ b/environment.yml
@@ -3,6 +3,7 @@ channels:
   - conda-forge
   - defaults
 dependencies:
+  - python=3.10
   - pip
   - pip:
       - torch 
@@ -20,6 +21,5 @@ dependencies:
       - setuptools
       - streamlit
       - graphviz
-
   - brew: 
       - graphviz
