--- a/environment.yml
+++ b/environment.yml
@@ -3,7 +3,6 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.10
   - pip
   - pip:
       - torch 
@@ -21,5 +20,5 @@ dependencies:
       - setuptools
       - streamlit
       - graphviz
-  - brew: 
+  - conda:
       - graphviz
