--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,27 @@
-pandas==2.2.0
+arize==7.18.1
+black==22.6.0
+catboost==1.2.7
+flask==3.0.0
+jinja2==3.1.3
 matplotlib==3.8.2
-seaborn==0.13.2
-streamlit==1.30.0
+mlflow==2.11.3
 nltk==3.8.1
 numpy==1.26.4
-scikit-learn==1.4.0
-shap==0.44.0
-prophet==1.1.5
-xgboost==2.0.3
-statsmodels==0.14.1
+pandas==2.2.0
 plotly==5.19.0
+prophet==1.1.5
+pylint==2.15.0
+pytest==7.1.2
+pyyaml==6.0.1
+scikit-learn==1.4.0
+seaborn==0.13.2
+setuptools==69.1.1
+shap==0.44.0
+statsmodels==0.14.1
+streamlit==1.30.0
 tensorflow==2.15.0
 torch==2.2.0
-pyyaml==6.0.1
 tqdm==4.66.2
 transformers==4.37.2
-mlflow==2.11.3
-jinja2==3.1.3
-flask==3.0.0
-setuptools==69.1.1
+Werkzeug==2.2.2
+xgboost==2.0.3
