--- a/.github/workflows/github-cicd.yml
+++ b/.github/workflows/github-cicd.yml
@@ -1,14 +1,17 @@
 name: Banking MLOps CICD pipeline
 
+# Define environment variables that will be used throughout the workflow.
 env:
+  # Docker Hub username, retrieved from GitHub secrets.
   DOCKER_USER: ${{secrets.DOCKER_USER}}
+  # Docker Hub password, retrieved from GitHub secrets.
   DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
+  # Name of the repository on Docker Hub, retrieved from GitHub secrets.
   REPO_NAME: ${{secrets.REPO_NAME}}
 
 # Event Triggers:
 # The pipeline is triggered whenever there is a push to the main branch.
 # It is also triggered whenever there is a pull request to the main branch.
-
 on:
   push:
     branches:
@@ -17,68 +20,72 @@ on:
     branches:
     - main
 
-# this pipeline consists of a two jobs named ci_pipeline
+# this pipeline consists of a two jobs named ci_pipeline and cd_pipeline
 
 jobs:
+  # The ci_pipeline job is responsible for Continuous Integration.
   ci_pipeline: 
-       runs-on: ubuntu-latest     # The job runs on the ubuntu-latest operating system
+       # Specifies the operating system for the job.
+       runs-on: ubuntu-latest     
        
        steps:
         - uses: actions/checkout@v1 
+          # Fetches the entire commit history.
           with:
             fetch-depth: 0
-#The first step uses the actions/checkout@v1 action to clone the repository.
-#The fetch-depth: 0 parameter ensures that the complete commit history is fetched.
-
+        
+        # Sets up Python 3.9 environment.
         - name: Set up Python 3.9
           uses: actions/setup-python@v1
           with:
             python-version: 3.9
-#The second step sets up Python 3.9 by using the actions/setup-python@v1 action.
-#The python-version: 3.9 parameter specifies the desired Python version.
 
+        # Installs project dependencies from requirements.txt.
         - name: Install dependencies
           run: |
             python -m pip install --upgrade pip
             if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-# The third step installs the project dependencies.
 
+        # Formats the specified Python files using the Black code formatter.
         - name: Format
           run: |
             BLACK_FILES="src/app.py src/components/header.py src/components/page.py"
             black $BLACK_FILES 
-# The fourth step formats the app.py file using the black code formatter.
 
+        # Performs linting on the specified Python files using Pylint.
         - name: Lint
           run: |
             LINT_FILES="src/app.py src/components/header.py src/components/page.py"
             pylint --disable=R,C $LINT_FILES 
-#The fifth step performs linting on the app.py file using pylint.
-#The --disable=R,C flag disables specific pylint checks.
 
+        # # Example of a test step (commented out).
         # - name: Test
         #   run: |
         #     python -m pytest -vv test.py
 
 
+  # The cd_pipeline job is responsible for Continuous Deployment.
   cd_pipeline:
-
       runs-on: ubuntu-latest 
+      # This job depends on the successful completion of the ci_pipeline job.
       needs: [ci_pipeline]
  
       steps:
-
       - uses: actions/checkout@v2 
+      # Logs into Docker Hub using the provided credentials.
       - name: docker login
-        run: | # log into docker hub account
+        run: | 
           docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
   
-      - name: Get current date # get the date of the build
+      # Gets the current date and time and sets it as an output.
+      - name: Get current date 
         id: date
         run: echo "::set-output name=date::$(date +'%Y-%m-%d--%M-%S')"
 
-      - name: Build the Docker image # push The image to the docker hub
+      # Builds the Docker image and tags it with the current date and time.
+      - name: Build the Docker image 
         run: docker build . --file Dockerfile --tag $DOCKER_USER/$REPO_NAME:${{ steps.date.outputs.date }}
 
+      # Pushes the built Docker image to Docker Hub.
       - name: Docker Push
         run: docker push $DOCKER_USER/$REPO_NAME:${{ steps.date.outputs.date }}
