--- a/.github/workflows/gcp-cicd-deployement.yml
+++ b/.github/workflows/gcp-cicd-deployement.yml
@@ -24,6 +24,10 @@ jobs:
           credentials_json: '${{ secrets.GCP_SA_KEY }}'
           project_id: ${{ env.PROJECT_ID }}
 
+      - name: Set GCP project 
+        run: |
+          gcloud config set project ${{ env.PROJECT_ID }}
+
       - name: Set up Cloud SDK
         uses: 'google-github-actions/setup-gcloud@v2'
 
