--- a/.github/workflows/gcp-cicd-deployement.yml
+++ b/.github/workflows/gcp-cicd-deployement.yml
@@ -5,7 +5,7 @@ env:
   # PROJECT_ID: ${{ secrets.GCP_SA_KEY }}
   SERVICE_NAME:  banking-mlops-app
   PROJECT_ID: appmod-demo-lvl
-  DOCKER_IMAGE_URL: ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE_NAME }}/mlops-app
+  DOCKER_IMAGE_URL: ${{ secrets.GCP_REGION }}-docker.pkg.dev/$PROJECT_ID/SERVICE_NAME/mlops-app
 
 on:
   push:
@@ -24,11 +24,11 @@ jobs:
         uses: 'google-github-actions/auth@v2'
         with:
           credentials_json: '${{ secrets.GCP_SA_KEY }}'
-          project_id: ${{ env.PROJECT_ID }}
+          project_id: $PROJECT_ID
 
       - name: Set GCP project 
         run: |
-          gcloud config set project ${{ env.PROJECT_ID }}
+          gcloud config set project $PROJECT_ID
 
       - name: Set up Cloud SDK
         uses: 'google-github-actions/setup-gcloud@v2'
@@ -39,14 +39,14 @@ jobs:
 
       - name: Build and Push Docker Image
         run: |
-          docker build -t ${{ env.DOCKER_IMAGE_URL }}:latest -f Dockerfile.prod .
-          docker push ${{ env.DOCKER_IMAGE_URL }}:latest
+          docker build -t $DOCKER_IMAGE_URL:latest -f Dockerfile.prod .
+          docker push $DOCKER_IMAGE_URL:latest
 
       - name: Deploy to Cloud Run
         run: |
           echo SERVICE_NAME $SERVICE_NAME
           gcloud run deploy $SERVICE_NAME \
-            --image ${{ env.DOCKER_IMAGE_URL }}:latest \
+            --image $DOCKER_IMAGE_URL:latest \
             --platform managed \
             --region ${{ secrets.GCP_REGION }} \
             --allow-unauthenticated
