debug cd with echo of project-id

--- a/.github/workflows/gcp-cicd-deployement.yml
+++ b/.github/workflows/gcp-cicd-deployement.yml
@@ -28,6 +28,7 @@ jobs:
 
       - name: Set GCP project 
         run: |
+          echo "PROJECT_ID: $PROJECT_ID"  # Add this line
           gcloud config set project $PROJECT_ID
 
       - name: Set up Cloud SDK
