main GCP-cloudrun.yml

--- a/.github/workflows/GCP-cloudrun.yml
+++ b/.github/workflows/GCP-cloudrun.yml
@@ -32,7 +32,7 @@ name: 'Build and Deploy to Cloud Run'
 on:
   push:
     branches:
-      - '"cyrena-cd"'
+      - main
 
 env:
   PROJECT_ID: 'appmod-demo-lvl'
