--- a/.github/workflows/GCP-cloudrun.yml
+++ b/.github/workflows/GCP-cloudrun.yml
@@ -89,7 +89,7 @@ jobs:
           region: '${{ env.REGION }}'
           # NOTE: If using a pre-built image, update the image name below:
 
-          image: '${{ env.REGION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}'
+          image: 'europe-west1-docker.pkg.dev/appmod-demo-lvl/banking-mlops/mlops-apps@sha256:484a105f786fb5accc31e553140943afaa72a8682653803c2a5cac05f68e036f'
       # If required, use the Cloud Run URL output in later steps
       - name: 'Show output'
         run: |2-
