--- a/.github/workflows/GCP-cloudrun.yml
+++ b/.github/workflows/GCP-cloudrun.yml
@@ -62,6 +62,11 @@ jobs:
         uses: 'google-github-actions/auth@f112390a2df9932162083945e46d439060d66ec2' # google-github-actions/auth@v2
         with:
           workload_identity_provider: '${{ env.WORKLOAD_IDENTITY_PROVIDER }}'
+      - name: Google Cloud Auth Service Account
+        uses: 'google-github-actions/auth@v2'
+        with:
+          credentials_json: '${{ secrets.GCP_SA_KEY }}'
+          project_id: $PROJECT_ID
 
       # BEGIN - Docker auth and build
       #
