--- a/.github/workflows/GCP-cloudrun.yml
+++ b/.github/workflows/GCP-cloudrun.yml
@@ -66,7 +66,7 @@ jobs:
         uses: 'google-github-actions/auth@v2'
         with:
           credentials_json: '${{ secrets.GCP_SA_KEY }}'
-          project_id: $PROJECT_ID
+          project_id: '${{ env.PROJECT_ID }}'
 
       # BEGIN - Docker auth and build
       #
