--- a/.github/workflows/GCP-cloudrun.yml
+++ b/.github/workflows/GCP-cloudrun.yml
@@ -31,7 +31,7 @@ name: 'Build and Deploy to Cloud Run'
 on:
   push:
     branches:
-      - gcp-cloudrun
+      - main
 
 env:
   PROJECT_ID: 'appmod-demo-lvl'
